# libImage

./: .gitignore  CMakeLists.txt
app/: CMakeLists.txt
app/cmake/: findGitCommit.cmake
app/include/app/: version.h.in  versionInfo.h
app/src/: main.cpp  versionInfo.cpp
examples/bmp/: bmp_3х3.xcf  bmp_3х3_v2.xcf
libs/: CMakeLists.txt
libs/bmplib/: CMakeLists.txt
libs/coreImage/: CMakeLists.txt  readme.txt
libs/coreImage/src/: channel.cpp  channelView.cpp  channel_data.cpp  channel_info.cpp  coreImage.cpp  image.cpp  image_converters.cpp  packed.cpp  transform.cpp  types.cpp
libs/coreImage/src/include/coreImage/: channel.h  channelElementDesc.h  channelView.h  channel_data.h  channel_info.h  coreImage.h  image.h  image_converters.h  lib_coreImage.h  transform.h  types.h
libs/coreImage/src/test/: CMakeLists.txt  test_coreImage.cpp  test_coreImage02.cpp  test_coreImage03.cpp
libs/libImage/: CMakeLists.txt
libs/libImage/include/imageReader/: imageReader.h  readerAbsract.h
libs/libImage/src/: readerAbsract.cpp
libs/libImageReader/: CMakeLists.txt  CMakeLists_v2.txt  examples_doc.txt
libs/libImageReader/example/: example_create_rgb.cpp
libs/libImageReader/include/imageReader/: GammaLUT.h  aux_func.h  channel.h  channelView.h  conversionGraph.h  conversionPipeline.h  git_info.h.in  imageCommon.cpp  imageCommon.h  imageContext.h  imageReader.h  imageReaderAbsract.h  imageReaderGlobal.h  imageReaderPixel.h  imageReaderTypes.h  imageReader_BMP.h  imagereaderbmp.h  imagereaderfabric.h  pixel.h  pixelConverter.h  pixelFormat.h  pixelFormatValidator.h  pixelView.h  readerAbsract.h  threadPool.h  types.h  uploadContext.h  versionInfo.h  versionInfo.h.in
libs/libImageReader/scalar/: rgb_ycbcr_scalar.cpp  xyz_lab_lch_scalar.cpp
libs/libImageReader/simd/: resize_bilinear_avx2.cpp  rgb565_unpack_avx2.cpp  rgb_bgr_avx2.cpp  rgb_ycbcr_avx2.cpp  rgba_bgra_avx2.cpp  xyz_lab_lch_avx2.cpp
libs/libImageReader/src/: GammaLUT.cpp  aux_func.cpp  channelView.cpp  conversionGraph.cpp  conversionPipeline.cpp  imageCommon.cpp  imageContext.cpp  imageReader.cpp  imageReaderAbsract.cpp  imageReaderPixel.cpp  imageReaderTypes.cpp  imageReader_BMP.cpp  imagereaderbmp.cpp  imagereaderfabric.cpp  pixel.cpp  pixelConverter.cpp  pixelFormat.cpp  pixelFormatValidator.cpp  pixelView.cpp  readerAbsract.cpp  simd_rgb_bgr.cpp  threadPool.cpp  types.cpp  uploadContext.cpp  versionInfo.cpp
libs/libImageReader/test/: test_converter.cpp  test_pixelformat.cpp  test_rgb_ycbcr.cpp  test_roundtrip.cpp  test_xyz_lab_lch.cpp
libs/mylibbmp/: CMakeLists.txt
libs/mylibbmp/include/mylibbmp/: BmpImage.h  types.h
libs/mylibbmp/src/: BmpImage.cpp
scripts/: post-commit  post-commit.bat
